--- a/views/footer.jade
+++ b/views/footer.jade
@@ -1,5 +1,7 @@
 #footer
   small Copyright 2014 Trestle Technology, LLC.
+  span.divider |
+  | Having trouble? Need help? <a href = "https://github.com/trestletech/Todo.txt/issues" target="_blank">Let us know</a>.
 
 script.
   var _gaq = _gaq || [];
