--- a/views/index-no-user.jade
+++ b/views/index-no-user.jade
@@ -35,7 +35,30 @@ hr
 
     .col-md-4
       .feature
+        i.fa.fa-filter.fa-3x.feature-icon
+        .feature-text
+          h3 Filters
+          p Search and refine your todo list by project, context, keyword, or priority. You can keep a list of your favorite filters in the sidebar so they'll always be one click away.
+
+.container-fluid
+  .row-fluid
+    .col-md-4
+      .feature
         i.fa.fa-italic.fa-3x.feature-icon
         .feature-text
           h3 Raw Text Support
           p Sometimes you want control; we get it. Switch over to a familiar raw text view at any time to edit your todo list. We even have Todo.txt syntax highlighting.
+
+    .col-md-4
+      .feature
+        i.fa.fa-mobile.fa-3x.feature-icon
+        .feature-text
+          h3 Mobile Device Support
+          p We use a responsive layout to give you a comfortable experience whether you're on a phone, tablet, or full-size screen. Access your todos through a familiar interface wherever you are.
+
+    .col-md-4
+      .feature
+        i.fa.fa-sort-amount-asc.fa-3x.feature-icon
+        .feature-text
+          h3 Sorting &mdash; <span class="feature-accent">Coming Soon!</span>
+          p Sort your todos alphabetically, by due date, by priority, or in a number of other ways to find the important ones quickly.
