Emphasize open-source.

--- a/views/footer.jade
+++ b/views/footer.jade
@@ -1,7 +1,15 @@
 #footer
-  small Copyright 2014 Trestle Technology, LLC.
-  span.divider |
-  | Having trouble? Need help? <a href = "https://github.com/trestletech/Todo.txt/issues" target="_blank">Let us know</a>.
+  .container
+    .row-fluid
+      .col-sm-4
+        small Copyright 2014 <a href = "http://trestletechnology.net" target="_blank">Trestle Technology, LLC</a>.
+
+      .col-sm-4.footer-col
+        small Having trouble? Need help? <a href = "https://github.com/trestletech/Todo.txt/issues" target="_blank">Let us know</a>.
+
+      .col-sm-4
+        small Todo.txt++ is <a href = "https://github.com/trestletech/Todo.txt" target="_blank">open-source</a> (MIT license).
+
 
 script.
   var _gaq = _gaq || [];
