--- a/views/index-no-user.jade
+++ b/views/index-no-user.jade
@@ -44,10 +44,10 @@ hr
   .row-fluid
     .col-md-4
       .feature
-        i.fa.fa-italic.fa-3x.feature-icon
+        i.fa.fa-code.fa-3x.feature-icon
         .feature-text
-          h3 Raw Text Support
-          p Sometimes you want control; we get it. Switch over to a familiar raw text view at any time to edit your todo list. We even have Todo.txt syntax highlighting.
+          h3 Open Source
+          p Go ahead &mdash; grab the code <a href ="https://github.com/trestletech/Todo.txt">from GitHub</a>. Download it, fork it, patch it, whatever. It's all yours under <a href ="https://github.com/trestletech/Todo.txt/blob/master/LICENSE">the MIT license</a>. Do something interesting? Send us a pull request!
 
     .col-md-4
       .feature
@@ -55,10 +55,18 @@ hr
         .feature-text
           h3 Mobile Device Support
           p We use a responsive layout to give you a comfortable experience whether you're on a phone, tablet, or full-size screen. Access your todos through a familiar interface wherever you are.
+    
+    .col-md-4
+      .feature
+        i.fa.fa-italic.fa-3x.feature-icon
+        .feature-text
+          h3 Raw Text Support
+          p Sometimes you want control; we get it. Switch over to a familiar raw text view at any time to edit your todo list. We even have Todo.txt syntax highlighting.
 
+  //
     .col-md-4
       .feature
         i.fa.fa-sort-amount-asc.fa-3x.feature-icon
         .feature-text
-          h3 Sorting &mdash; <span class="feature-accent">Coming Soon!</span>
+          h3 Sorting
           p Sort your todos alphabetically, by due date, by priority, or in a number of other ways to find the important ones quickly.
