--- a/public/css/todotxtpp.css
+++ b/public/css/todotxtpp.css
@@ -245,6 +245,7 @@ button i {
   font-size: 26px;
 }
 
-#footer .divider{
-  margin: 0 .5em 0 .5em;
+#footer .footer-col{
+  border-right: 1px solid #CCC;
+  border-left: 1px solid #CCC;
 }
