--- a/views/index-no-user.jade
+++ b/views/index-no-user.jade
@@ -6,7 +6,7 @@
     .col-md-5
       h3.no-top Todo.txt++
       p.lead An online todo list manager based on the <a href = "http://todotxt.com">Todo.txt</a> format &mdash; complete with with Dropbox integration. If you keep your todos in a text file, you've already finished the hardest part. 
-      p.lead All code is open-source (MIT license) and available on <a href = "http://github.com/trestletech/Todo.txt">GitHub</a>. 
+      p.lead All code is open-source (MIT license) and available on <a href = "http://github.com/trestletech/todotxtpp">GitHub</a>. 
     .col-md-3
       // We will actually offer this page to logged in users at /home, so don't always show this button
       if !username
@@ -47,7 +47,7 @@ hr
         i.fa.fa-code.fa-3x.feature-icon
         .feature-text
           h3 Open Source
-          p Go ahead &mdash; grab the code <a href ="https://github.com/trestletech/Todo.txt">from GitHub</a>. Download it, fork it, patch it, whatever. It's all yours under <a href ="https://github.com/trestletech/Todo.txt/blob/master/LICENSE">the MIT license</a>. Do something interesting? Send us a pull request!
+          p Go ahead &mdash; grab the code <a href ="https://github.com/trestletech/todotxtpp">from GitHub</a>. Download it, fork it, patch it, whatever. It's all yours under <a href ="https://github.com/trestletech/todotxtpp/blob/master/LICENSE">the MIT license</a>. Do something interesting? Send us a pull request!
 
     .col-md-4
       .feature
