--- a/views/footer.jade
+++ b/views/footer.jade
@@ -5,10 +5,10 @@
         small Copyright 2014 <a href = "http://trestletechnology.net" target="_blank">Trestle Technology, LLC</a>.
 
       .col-sm-4.footer-col
-        small Having trouble? Need help? <a href = "https://github.com/trestletech/Todo.txt/issues" target="_blank">Let us know</a>.
+        small Having trouble? Need help? <a href = "https://github.com/trestletech/todotxtpp/issues" target="_blank">Let us know</a>.
 
       .col-sm-4
-        small Todo.txt++ is <a href = "https://github.com/trestletech/Todo.txt" target="_blank">open-source</a> (MIT license).
+        small Todo.txt++ is <a href = "https://github.com/trestletech/todotxtpp" target="_blank">open-source</a> (MIT license).
 
 
 script.
