Enable resorting of filters.
Closes #14, but the feature still isn't really going to work right until #17 is addressed.

--- a/views/head.jade
+++ b/views/head.jade
@@ -44,6 +44,9 @@ head
   // FontAwesome
   link(href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css",rel="stylesheet")
 
+  // JQuery UI (for sortable)
+  link(href="/css/jquery-ui.min.css",rel="stylesheet")
+  script(src="/js/jquery-ui.min.js")
 
   meta(charset="utf-8")
   meta(http-equiv="X-UA-Compatible", content="IE=edge")
