Updated ACE to include proper auto complete regex matching still using a fake dictionary.
Pertaining to #16. Still need to compile the actual dictionary of project/contexts.

--- a/views/head.jade
+++ b/views/head.jade
@@ -55,6 +55,7 @@ head
 body
   script(src="/js/ace.js")
   script(src="/js/mode-todotxt.js")
+  script(src="/js/ext-language_tools.js")
 
   nav.navbar.navbar-default(role="navigation")
     .container-fluid
