--- a/views/head.jade
+++ b/views/head.jade
@@ -67,6 +67,11 @@ body
           img(src="/images/todotxtpp-sm.png")
           | Todo.txt++
 
+
+        ul.nav.navbar-nav
+          li
+            a#twitter-logo(href="http://twitter.com/todotxtpp", target="_blank", title="@todotxtpp")
+
       .collapse.navbar-collapse#bs-example-navbar-collapse-1        
         ul.nav.navbar-nav.navbar-right
           if username
