--- a/views/head.jade
+++ b/views/head.jade
@@ -48,6 +48,12 @@ head
   link(href="/css/jquery-ui.min.css",rel="stylesheet")
   script(src="/js/jquery-ui.min.js")
 
+  // Ladda
+  script(src="/js/ladda-0.9.4/spin.min.js")
+  script(src="/js/ladda-0.9.4/ladda.min.js")
+  script(src="/js/ladda-0.9.4/ladda.jquery.min.js")
+  link(href="/css/ladda-0.9.4/ladda.min.css", rel="stylesheet")
+
   meta(charset="utf-8")
   meta(http-equiv="X-UA-Compatible", content="IE=edge")
   meta(name="viewport",content="width=device-width, initial-scale=1")
