Dynamically size to 100% x 100%.
Haven't wired up the filter dropdown alternative.

--- a/public/css/todotxtpp.css
+++ b/public/css/todotxtpp.css
@@ -1,8 +1,23 @@
+html{
+  min-height: 100%;
+  position: relative;
+}
+
+body {
+  margin: 0 0 45px;
+  overflow: hidden;
+}
+
 #footer {
-  margin-top: 2em;
-  padding-top: .5em;
+  padding-top: 5px;
   border-top: 1px solid #CCC;
   text-align: center;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  height: 30px;
+  width: 100%;
+  background-color: #FFF;
 }
 
 #sign-up {
@@ -59,6 +74,7 @@ button i {
 
 #ace-editor {
   height: 300px;
+  min-height: 120px;
   border: 1px solid #CCC;
 }
 
@@ -102,6 +118,12 @@ button i {
   cursor: hand;
 }
 
+#filter-select {
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 15px;
+}
+
 #search-btn{
   border: none;
   border-left: 1px solid #AAA;  
@@ -119,9 +141,14 @@ button i {
 }
 
 #sidebar {
-  border: 1px solid #AAA;
-  border-bottom: none;
   margin-bottom: 5px;
+}
+
+@media (min-width: 768px) {
+  #sidebar {
+    border: 1px solid #AAA;
+    border-bottom: none;
+  }  
 }
 
 #sidebar ul
