--- a/views/footer.jade
+++ b/views/footer.jade
@@ -4,10 +4,10 @@
       .col-sm-4
         small Copyright 2014 <a href = "http://trestletechnology.net" target="_blank">Trestle Technology, LLC</a>.
 
-      .col-sm-4.footer-col
+      .col-sm-4.footer-col.hidden-xs
         small Having trouble? Need help? <a href = "https://github.com/trestletech/todotxtpp/issues" target="_blank">Let us know</a>.
 
-      .col-sm-4
+      .col-sm-4.hidden-xs
         small Todo.txt++ is <a href = "https://github.com/trestletech/todotxtpp" target="_blank">open-source</a> (MIT license).
 
 
@@ -21,3 +21,5 @@ script.
     ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
   })();
+
+<div class="device-xs visible-xs"></div>
