Resolving some jshint errors. Moved view JS into todotxtpp.js file.

--- a/views/index-main.jade
+++ b/views/index-main.jade
@@ -49,175 +49,7 @@
           | Save
 
 script.
-  var editor;
-  var savebtn;
-
-  $(document).ready(function(){
-    savebtn = $('#save-btn').ladda();
-
-    editor = Todotxt.setEditor(ace.edit("ace-editor"));
-
-    editor.getSession().setMode("ace/mode/todotxt");
-    editor.setShowPrintMargin(false);
-    editor.getSession().setUseWrapMode('free');
-
-    Todotxt.getList(function(err, data){
-      if (err){
-        $(document).trigger("add-alerts", [
-          {
-            'message': "Unable to load file from Dropbox. Please try again later.",
-            'priority': 'error'
-          }
-        ]);
-        return;
-      }
-
-      var langTools = ace.require("ace/ext/language_tools");
-      var Autocomplete = ace.require("ace/autocomplete").Autocomplete;
-      editor.setOptions({enableBasicAutocompletion: true});
-      
-      // Clear out the default completers
-      while (editor.completers.length > 0){
-        // Can't just assign to a new array -- references get messed up. Just empty.
-        editor.completers.pop();
-      }
-      
-      var dictCompleter = {
-          getCompletions: function(editor, session, pos, prefix, callback) {
-              if (prefix.length === 0) { callback(null, []); return }
-              
-              // From http://stackoverflow.com/questions/3446170/escape-string-for-use-in-javascript-regex
-              function escapeRegExp(str) {
-                return str.replace(/[\-\[\]\/\{\}\(\)\*\+\?\.\\\^\$\|]/g, "\\$&");
-              }
-
-              var matches = [];
-              $.each(Todotxt.dictionary, function(ind, val){
-                if (val.match(new RegExp('^' + escapeRegExp(prefix), "i"))){
-                  matches.push({name: val, value: val});
-                }                
-              });
-
-              callback(null, matches);
-          }
-      }
-
-      langTools.addCompleter(dictCompleter);
-
-      // Enable tab for auto-completion
-      editor.commands.addCommand({
-        name: "startAutocomplete",
-        exec: function(editor) {
-            if (!editor.completer)
-              editor.completer = new Autocomplete();
-            editor.completer.autoInsert = 
-            editor.completer.autoSelect = true;
-            editor.completer.showPopup(editor);
-            // needed for firefox on mac
-            editor.completer.cancelContextMenu();
-        },
-        bindKey: "tab"
-      });
-
-      SAVE_FREQUENCY = 5000; // max interval for automatic saves
-      saveTimer = null;
-      lastSave = Date.now();    
-
-      // The function to eval when we want to save.
-      saveFun = function(){
-        lastSave = Date.now();
-        saveFile(function(){
-          // Restore the periodic check for external updates.
-          Todotxt.setCheck(true);
-        });
-
-        // Reset the timer.
-        clearInterval(saveTimer);
-        saveTimer = null;
-      };
-
-      // This will be logged as a keystroke that fires a save function, but
-      // one extra save probably isn't the end of the world.
-      editor.commands.addCommand({
-        name:"save",
-        bindKey: {win: "Ctrl-S", mac: "Command-S"},
-        exec: saveFun
-      });
-
-      // Listen for keyboard interactions with the editor so we can
-      // auto-save.
-      $('#ace-editor').keyup(function(e) {
-        if (saveTimer != null) {
-          // We already have a save scheduled
-          return;
-        }
-        
-        tDiff = Date.now() - lastSave;
-        
-        if (tDiff >= SAVE_FREQUENCY) {
-          // Then we can just save now
-          setTimeout(saveFun, 0);
-        } else {
-          // Temporarily disable the periodic checks for external updates
-          // since our own saves will look like external updates by the time
-          // the AJAX makes the round-trip and the editor has changed.
-          Todotxt.setCheck(false);
-
-          // We need to schedule a save
-          saveTimer = setTimeout(saveFun, SAVE_FREQUENCY - tDiff);
-        }
-      }); 
-
-    }, true);
-  });
-    
-  saveFile = function(cb){
-    savebtn.ladda('start');
-    
-    Todotxt.save(function(err, data){      
-      if (cb){
-        cb();
-      }
-      
-      savebtn.ladda('stop');
-
-      if (err){
-        $(document).trigger("add-alerts", [
-          {
-            'message': "Error saving file: " + status,
-            'priority': 'error'
-          }
-        ]);
-        return;
-      }
-
-      if (data && data.errors && data.errors.length > 0){
-        $(document).trigger("add-alerts", [
-          {
-            'message': data.errors[0],
-            'priority': 'error'
-          }
-        ]);
-        return;
-      }
-    });
-  }
-
-  function resizeAce() {    
-    // The summed height of everything else on the screen for either wide or narrow views
-    sHeight = $('.navbar').outerHeight(true) +$('#footer').outerHeight(true) + $('#save-row').outerHeight(true);
-    sHeight += 20; // gap on absolutely positioned footer
-
-    if ($('.device-xs').is(':visible')){
-      sHeight += $('#filter-select').outerHeight(true);
-    }
-
-    $("#ace-editor").height($(window).height()-sHeight); 
-    editor.resize();
-  };
-  $(window).resize(resizeAce);
-  setTimeout(resizeAce,0); // Let Bootstrap do its thing first.
-
+  Todotxt.activateEditor();
 
 #createModal.modal.fade(tabindex='-1', role='dialog', aria-labelledby='createModalLabel', aria-hidden='true')
   .modal-dialog
